<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.CardSplashFragment">

    <ImageView
        android:id="@+id/img_add_card"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:contentDescription="@null"
        android:src="@drawable/img_placeholder"
        android:layout_marginBottom="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/add_card_splash_title"/>

    <TextView
        android:id="@+id/add_card_splash_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_card_splash_title"
        android:gravity="center"
        android:textSize="30sp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/add_card_splash_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_card_splash_description"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_card_splash_title"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btn_add_card_splash"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/btn_add_card_splash"
        android:background="@color/colorBrand"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>